# alhambra

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
alhambra/: __init__.py  classes.py  ends.py  fastreduce.py  fastreduceD.py  flatish.py  glue.py  grid.py  newseed.py  newtile.py  newtileset.py  seeds.py  sensitivitynew.py  sensitivityprofiles.py  seq.py  test_seq.py  tiles.py  tilesets.py  tilestructures.py  util.py
docs/: conf.py  mixes.rst
docs/source/: conf.py  mixes.rst
examples/: newline_scrubbing.py
olddocs/: alhambra.rst  conf.py  references.rst
src/alhambra/: __init__.py  _tilesets_dx.py  anneal.py  classes.py  drawing.py  edotparen.py  endreorder.py  fastlatticedefect.py  fastreduce.py  fastreduceD.py  flatish.py  glues.py  grid.py  latticedefect.py  mixes.py  nuad.py  old_tilesets.py  quantitate.py  scripts.py  seeds.py  sensitivity.py  sensitivitynew.py  seq.py  tiles.py  tilesets.py  util.py
src/alhambra_old/: fastreduceD.py  old_util.py
tests/: sample_coa.csv  test_examples.py  test_mixes.py  test_quantitate.py  test_reference.csv
