[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=7", "wheel"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
write_to = "src/alhambra/_version.py"

[tool.pytest.ini_options]
addopts = "--cov qslib --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"]
testpaths = ["tests"]
pythonpath = [
  "src"
]

[project]
name = "alhambra"
dynamic = ["version"]
description = "DNA Tile System Designer"
license = {text = "BSD 3-Clause"}
authors = [{name = "Constantine Evans", email = "const@costi.eu"}]
readme = {file = "README.md", "content-type" = "text/markdown; charset=UTF-8"}

classifiers = ["Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "stickydesign >= 0.9.0.a1",
    "shutilwhich",
    "peppercompiler >= 0.1.2",
    "ruamel.yaml >= 0.15.100",
    "cssutils",
    "pandas",
    "openpyxl",
    "typing_extensions >= 4.1",
    "pint >= 0.19.2",
    "tabulate",
    "toml",
    "scadnano",
    "xgrow >= 20220722",
    "alhambra_mixes >= 0.4.0"
]

[project.optional-dependencies]
all = [
    "seaborn",
    "matplotlib",
    "scadnano"
    ]
docs = [
    "numpydoc",
    "matplotlib",
    "sphinx-book-theme",
    "sphinx-autoapi",
    "myst-parser"
    ]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov"
    ]


[project.scripts]
alhambra = "alhambra.scripts:alhambra"

[tool.black]
target_version = ["py310"]

[tool.mypy]
python_version = "3.10"
# warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
