[metadata]
name = alhambra
description = DNA Tile System Designer
author = Constantine Evans
license = BSD 3-Clause
author_email = const@costinet.org
platforms=any

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
include_package_data = True
zip_safe = False
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy
    stickydesign >= 0.8.1
    drawSvg_svgy @ git+https://github.com/cgevans/drawSvg_svgy@master
    lxml
    shutilwhich
    peppercompiler >= 0.1.2
    ruamel.yaml >= 0.15.100
    cssutils
    pandas
    pint
    pint-pandas
    tabulate
    toml
    scadnano
    xgrow @ git+https://github.com/DNA-and-Natural-Algorithms-Group/xgrow@new-tileset-api
python_requires = >=3.10
setup_requires =
    setuptools_scm
    wheel

[options.extras_require]
all =
    stickydesign
    seaborn
    matplotlib
    scadnano
docs =
    numpydoc
testing =
    setuptools
    pytest
    pytest-cov

[options.package_data]
alhambra = *.comp *.svg rgb.txt spuriousSSM

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
# Add here console scripts like:
console_scripts =
    alhambra = alhambra.scripts:alhambra

[flake8]
max_line_length = 127
extend_ignore = E203, W503, F403, F405
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[bdist_wheel]
universal = 1
