[metadata]
platforms=any

long_description = file: README.md
long_description_content_type = 

[options]
include_package_data = True
zip_safe = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy
    stickydesign >= 0.9.0.a1
    shutilwhich
    peppercompiler >= 0.1.2
    ruamel.yaml >= 0.15.100
    cssutils
    pandas
    openpyxl
    typing_extensions >= 4.1
    pint >= 0.19.2
    tabulate
    toml
    scadnano
    xgrow >= 20220722
    alhambra_mixes >= 0.4.0
python_requires = >=3.9
setup_requires =
    setuptools_scm
    wheel

[options.extras_require]
all =
    seaborn
    matplotlib
    scadnano
docs =
    numpydoc
    matplotlib
    sphinx-book-theme
    sphinx-autoapi
    myst-parser
testing =
    setuptools
    pytest
    pytest-cov

[options.package_data]
alhambra = *.comp *.svg rgb.txt spuriousSSM

[options.packages.find]
where = src
exclude =
    tests


[flake8]
max_line_length = 127
extend_ignore = E203, W503, F403, F405
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[bdist_wheel]
universal = 1
