[metadata]
platforms=any

long_description = file: README.md
long_description_content_type = 

[options]
include_package_data = True
zip_safe = True
package_dir =
    =src
packages = find_namespace:
install_requires =

python_requires = >=3.9
setup_requires =
    setuptools_scm
    wheel

[options.package_data]
alhambra = *.comp *.svg rgb.txt spuriousSSM

[options.packages.find]
where = src
exclude =
    tests


[flake8]
max_line_length = 127
extend_ignore = E203, W503, F403, F405
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[bdist_wheel]
universal = 1
